POS marketing updated

--- a/details/pos_marketing.html
+++ b/details/pos_marketing.html
@@ -291,8 +291,8 @@
                         </div>
                     </section>
                     <div class="row gy-5">
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
+                        <div class="col-lg-3 col-md-6" >
+                            <div class="service-item md-pb-30" data-category="POS Marketing" data-brands="Bacardi">
                                 <h4 class="service-text"><a href="/project_detials/Pos_marketing/Bacardi.html"><br>Bacardi</a>
                                 </h4>
                                 <div class="service-thumb">
@@ -312,9 +312,79 @@
                                 <div class="service-thumb">
                                     <div class="overlay-color"></div>
 
-                                    <img style="object-fit: fill;" src="/assets/img/project_details/Bacardi/Bacardi Superior 300x360.png" alt="service">
+                                    <img style="object-fit: fill;" src="/assets/img/project_details/Retail Transformation/Wine Shop 300x360.png" alt="service">
 
                                     <a href="/project_detials/Pos_marketing/Retail Transformation.html" class="service-btn">Read Details <i
+                                            class="fa-regular fa-arrow-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item md-pb-30" data-category="POS Marketing" data-brands="Bacardi">
+                                <h4 class="service-text"><a href="/project_detials/Pos_marketing/Bacardi_breezer.html">Bacardi<br>Breezer</a>
+                                </h4>
+                                <div class="service-thumb">
+                                    <div class="overlay-color"></div>
+
+                                    <img style="object-fit: fill;" src="/assets/img/project_details/Bacardi Breezer/Breezer 300x360.png" alt="service">
+
+                                    <a href="/project_detials/Pos_marketing/Bacardi_breezer.html" class="service-btn">Read Details <i
+                                            class="fa-regular fa-arrow-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item md-pb-30">
+                                <h4 class="service-text"><a href="/project_detials/Pos_marketing/dewars.html"><br>Dewar's</a>
+                                </h4>
+                                <div class="service-thumb">
+                                    <div class="overlay-color"></div>
+
+                                    <img style="object-fit: fill;" src="/assets/img/project_details/Dewars/Drops 300x360  .png" alt="service">
+
+                                    <a href="/project_detials/Pos_marketing/dewars.html" class="service-btn">Read Details <i
+                                            class="fa-regular fa-arrow-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item md-pb-30">
+                                <h4 class="service-text"><a href="/project_detials/Pos_marketing/Grey_Goose.html">Grey<br>Goose</a>
+                                </h4>
+                                <div class="service-thumb">
+                                    <div class="overlay-color"></div>
+
+                                    <img style="object-fit: fill;" src="/assets/img/project_details/grey goose/GG 300x360.png" alt="service">
+
+                                    <a href="/project_detials/Pos_marketing/Grey_Goose.html" class="service-btn">Read Details <i
+                                            class="fa-regular fa-arrow-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item md-pb-30">
+                                <h4 class="service-text"><a href="/project_detials/Pos_marketing/Grey_Goose.html"><br>Martini</a>
+                                </h4>
+                                <div class="service-thumb">
+                                    <div class="overlay-color"></div>
+
+                                    <img style="object-fit: fill;" src="/assets/img/project_details/Martini/Martini 300x360.png" alt="service">
+
+                                    <a href="/project_detials/Pos_marketing/Martini.html" class="service-btn">Read Details <i
+                                            class="fa-regular fa-arrow-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item md-pb-30">
+                                <h4 class="service-text"><a href="/project_detials/Pos_marketing/Bacardi_MBG.html">Bacardi<br>MBG</a>
+                                </h4>
+                                <div class="service-thumb">
+                                    <div class="overlay-color"></div>
+
+                                    <img style="object-fit: fill;" src="/assets/img/project_details/Bacardi MBG/MBG 300x360.png" alt="service">
+
+                                    <a href="/project_detials/Pos_marketing/Bacardi_MBG.html" class="service-btn">Read Details <i
                                             class="fa-regular fa-arrow-right"></i></a>
                                 </div>
                             </div>
