slider + thumbnail added

--- a/project_detials/Pos_marketing/Martini.html
+++ b/project_detials/Pos_marketing/Martini.html
@@ -366,7 +366,7 @@
                                                             data-duration="1.5">Project 1</h4>-->
                                     <h2 class="section-title" data-text-animation="fade-in-right" data-split="char"
                                         data-duration="0.6" data-stagger="0.04">
-                                        Design Features:
+                                        Design Features
 
                                     </h2>
                                     <h4 data-text-animation data-split="word" data-duration="1">
@@ -405,7 +405,7 @@
                                                             data-duration="1.5">Project 1</h4>-->
                                     <h2 class="section-title" data-text-animation="fade-in-right" data-split="char"
                                         data-duration="0.6" data-stagger="0.04">
-                                        Impact:
+                                        Impact
                                     </h2>
                                     <h4 data-text-animation data-split="word" data-duration="1">
 
