--- a/service.html
+++ b/service.html
@@ -239,7 +239,7 @@
                         </h2>
                     </div>
 
-                    <section class="filter-section">
+                    <!-- <section class="filter-section">
                         <div class="filter-container">
                             <div class="filter-group">
                                 <div class="filter-dropdown-wrapper">
@@ -273,7 +273,7 @@
                                     <i class="fas fa-tags"></i> </button>
                             </div>
                         </div>
-                    </section>
+                    </section> -->
                     
                     <div class="row gy-5 service-items-container">
                         <div class="col-lg-3 col-md-6 service-item" id="service-1" data-category="ATL Marketing" data-brands="ABInBev, Coca-Cola">
@@ -281,7 +281,6 @@
                             </h4>
                             <div class="service-thumb">
                                 <div class="overlay-color"></div>
-                                <div class="transparent-shape"><img src="" alt="shape"></div>
                                 <img src="/assets/img/service/ATLarketing.jpg" alt="service">
 
                                 <a href="/details/atl_marketing.html" class="service-btn">Read Details <i
@@ -452,129 +451,7 @@
                     </div>
                 </div>
             </section>
-            <section class="pricing-section pt-130 pb-130">
-                <div class="container">
-                    <div class="section-heading heading-3 text-center">
-                        <h4 class="sub-heading" data-text-animation="fade-in" data-duration="1.5">Our Pricing Plans</h4>
-                        <h2 class="section-title" data-text-animation data-split="word" data-duration="1">Our Flexible
-                            Pricing</h2>
-                    </div>
-                    <div class="pricing-tab wow fade-in-bottom" data-wow-delay="500ms">
-                        <nav class="nav-wrap">
-                            <div class="nav nav-tabs mb-50" id="nav-tab" role="tablist">
-                                <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab"
-                                    data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home"
-                                    aria-selected="true">Billed Yearly <span>30%</span></button>
-                                <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab"
-                                    data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile"
-                                    aria-selected="false">Billed Monthly</button>
-                            </div>
-                        </nav>
-                        <div class="tab-content" id="nav-tabContent">
-                            <div class="tab-pane fade show active" id="nav-home" role="tabpanel"
-                                aria-labelledby="nav-home-tab">
-                                <div class="row gy-lg-0 gy-4 justify-content-center">
-                                    <div class="col-lg-4 col-md-6">
-                                        <div class="pricing-item">
-                                            <h4 class="plan">Basic Plan</h4>
-                                            <h2 class="price">$39</h2>
-                                            <span>Basic features for up to 10 Users</span>
-                                            <div class="pricing-btn-wrap">
-                                                <a href="contact.html" class="rr-primary-btn pricing-btn">Get in Touch
-                                                    <i class="fa-sharp fa-regular fa-arrow-right"></i></a>
-                                                <a href="pricing.html" class="rr-primary-btn pricing-btn">View Details
-                                                    <i class="fa-sharp fa-regular fa-arrow-right"></i></a>
-                                            </div>
-                                            <h3 class="feature">Features:</h3>
-                                            <p>Everything in our free plan it’s included with all premium packages.</p>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-4 col-md-6">
-                                        <div class="pricing-item">
-                                            <h4 class="plan">Strandard Plan</h4>
-                                            <h2 class="price">$49</h2>
-                                            <span>Basic features for up to 10 Users</span>
-                                            <div class="pricing-btn-wrap">
-                                                <a href="contact.html" class="rr-primary-btn pricing-btn">Get in Touch
-                                                    <i class="fa-sharp fa-regular fa-arrow-right"></i></a>
-                                                <a href="pricing.html" class="rr-primary-btn pricing-btn">View Details
-                                                    <i class="fa-sharp fa-regular fa-arrow-right"></i></a>
-                                            </div>
-                                            <h3 class="feature">Features:</h3>
-                                            <p>Everything in our free plan it’s included with all premium packages.</p>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-4 col-md-6">
-                                        <div class="pricing-item">
-                                            <h4 class="plan">Premium Plan</h4>
-                                            <h2 class="price">$59</h2>
-                                            <span>Basic features for up to 10 Users</span>
-                                            <div class="pricing-btn-wrap">
-                                                <a href="contact.html" class="rr-primary-btn pricing-btn">Get in Touch
-                                                    <i class="fa-sharp fa-regular fa-arrow-right"></i></a>
-                                                <a href="pricing.html" class="rr-primary-btn pricing-btn">View Details
-                                                    <i class="fa-sharp fa-regular fa-arrow-right"></i></a>
-                                            </div>
-                                            <h3 class="feature">Features:</h3>
-                                            <p>Everything in our free plan it’s included with all premium packages.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="tab-pane fade" id="nav-profile" role="tabpanel"
-                                aria-labelledby="nav-profile-tab">
-                                <div class="row gy-lg-0 gy-4 justify-content-center">
-                                    <div class="col-lg-4 col-md-6">
-                                        <div class="pricing-item">
-                                            <h4 class="plan">Basic Plan</h4>
-                                            <h2 class="price">$69</h2>
-                                            <span>Basic features for up to 10 Users</span>
-                                            <div class="pricing-btn-wrap">
-                                                <a href="contact.html" class="rr-primary-btn pricing-btn">Get in Touch
-                                                    <i class="fa-sharp fa-regular fa-arrow-right"></i></a>
-                                                <a href="pricing.html" class="rr-primary-btn pricing-btn">View Details
-                                                    <i class="fa-sharp fa-regular fa-arrow-right"></i></a>
-                                            </div>
-                                            <h3 class="feature">Features:</h3>
-                                            <p>Everything in our free plan it’s included with all premium packages.</p>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-4 col-md-6">
-                                        <div class="pricing-item">
-                                            <h4 class="plan">Strandard Plan</h4>
-                                            <h2 class="price">$79</h2>
-                                            <span>Basic features for up to 10 Users</span>
-                                            <div class="pricing-btn-wrap">
-                                                <a href="contact.html" class="rr-primary-btn pricing-btn">Get in Touch
-                                                    <i class="fa-sharp fa-regular fa-arrow-right"></i></a>
-                                                <a href="pricing.html" class="rr-primary-btn pricing-btn">View Details
-                                                    <i class="fa-sharp fa-regular fa-arrow-right"></i></a>
-                                            </div>
-                                            <h3 class="feature">Features:</h3>
-                                            <p>Everything in our free plan it’s included with all premium packages.</p>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-4 col-md-6">
-                                        <div class="pricing-item">
-                                            <h4 class="plan">Premium Plan</h4>
-                                            <h2 class="price">$99</h2>
-                                            <span>Basic features for up to 10 Users</span>
-                                            <div class="pricing-btn-wrap">
-                                                <a href="contact.html" class="rr-primary-btn pricing-btn">Get in Touch
-                                                    <i class="fa-sharp fa-regular fa-arrow-right"></i></a>
-                                                <a href="pricing.html" class="rr-primary-btn pricing-btn">View Details
-                                                    <i class="fa-sharp fa-regular fa-arrow-right"></i></a>
-                                            </div>
-                                            <h3 class="feature">Features:</h3>
-                                            <p>Everything in our free plan it’s included with all premium packages.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
+            
             <footer class="footer-section footer-2 bg-dark-1">
                 <div class="shape"><img src="assets/img/shapes/footer-shape.png" alt="footer"></div>
                 <div class="container">
