--- a/details/pos_marketing.html
+++ b/details/pos_marketing.html
@@ -321,7 +321,7 @@
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <div class="service-item md-pb-30" data-category="POS Marketing" data-brands="Bacardi">
-                                <h4 class="service-text"><a href="/project_detials/Pos_marketing/Bacardi_breezer.html">Bacardi<br>Breezer</a>
+                                <h4 class="service-text"><a href="/project_detials/Pos_marketing/Bacardi_breezer.html"><br>Breezer</a>
                                 </h4>
                                 <div class="service-thumb">
                                     <div class="overlay-color"></div>
@@ -349,7 +349,7 @@
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/project_detials/Pos_marketing/Grey_Goose.html">Grey<br>Goose</a>
+                                <h4 class="service-text"><a href="/project_detials/Pos_marketing/Grey_Goose.html"><br>Grey Goose</a>
                                 </h4>
                                 <div class="service-thumb">
                                     <div class="overlay-color"></div>
@@ -377,7 +377,7 @@
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/project_detials/Pos_marketing/Bacardi_MBG.html">Bacardi<br>MBG</a>
+                                <h4 class="service-text"><a href="/project_detials/Pos_marketing/Bacardi_MBG.html"><br>Bacardi MBG</a>
                                 </h4>
                                 <div class="service-thumb">
                                     <div class="overlay-color"></div>
