--- a/project_detials/Pos_marketing/Retail Transformation.html
+++ b/project_detials/Pos_marketing/Retail Transformation.html
@@ -354,67 +354,136 @@
 
             <!-- ./ about-section-2 -->
             <section class="full-width-image-carousel pt-70 pb-70">
-                <div class="container-fluid">
-                    <div class="section-heading text-center mb-50">
-                        <h2 class="section-title" data-text-animation="fade-in-right" data-split="char"
-                            data-duration="0.6" data-stagger="0.03">Project Gallery</h2>
-                    </div>
-                    <div class="swiper myFullScreenSwiper">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0005.png"
-                                    alt="Retail Transformation Wine Shop" class="img-fluid">
-                            </div>
-                            <div class="swiper-slide">
-                                <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0006.png"
-                                    alt="Retail Transformation Wine Shop" class="img-fluid">
-                            </div>
-                            <div class="swiper-slide">
-                                <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0007.png"
-                                    alt="Retail Transformation Wine Shop" class="img-fluid">
-                            </div>
-                            <div class="swiper-slide">
-                                <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0008.png"
-                                    alt="Retail Transformation Wine Shop" class="img-fluid">
-                            </div>
-                            <div class="swiper-slide">
-                                <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0009.png"
-                                    alt="Retail Transformation Wine Shop" class="img-fluid">
-                            </div>
-                            <div class="swiper-slide">
-                                <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0010.png"
-                                    alt="Retail Transformation Wine Shop" class="img-fluid">
-                            </div>
-                            <div class="swiper-slide">
-                                <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0011.png"
-                                    alt="Retail Transformation Wine Shop" class="img-fluid">
-                            </div>
-                            <div class="swiper-slide">
-                                <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0012.png"
-                                    alt="Retail Transformation Wine Shop" class="img-fluid">
-                            </div>
-                            <div class="swiper-slide">
-                                <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0013.png"
-                                    alt="Retail Transformation Wine Shop" class="img-fluid">
-                            </div>
-                            <div class="swiper-slide">
-                                <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0014.png"
-                                    alt="Retail Transformation Wine Shop" class="img-fluid">
-                            </div>
-                            <div class="swiper-slide">
-                                <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0015.png"
-                                    alt="Retail Transformation Wine Shop" class="img-fluid">
-                            </div>
-
+        <div class="container-fluid">
+            <div class="section-heading text-center mb-50">
+                <h2 class="section-title" data-text-animation="fade-in-right" data-split="char"
+                    data-duration="0.6" data-stagger="0.03">Project Gallery</h2>
+            </div>
+            
+            <div class="swiper myFullScreenSwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="carousel-image-wrapper">
+                            <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0005.png"
+                                alt="Retail Transformation Wine Shop" class="img-fluid">
                         </div>
-
-                        <div class="swiper-pagination"></div>
-
-                        <div class="swiper-button-next"></div>
-                        <div class="swiper-button-prev"></div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="carousel-image-wrapper">
+                            <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0006.png"
+                                alt="Retail Transformation Wine Shop" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="carousel-image-wrapper">
+                            <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0007.png"
+                                alt="Retail Transformation Wine Shop" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="carousel-image-wrapper">
+                            <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0008.png"
+                                alt="Retail Transformation Wine Shop" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="carousel-image-wrapper">
+                            <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0009.png"
+                                alt="Retail Transformation Wine Shop" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="carousel-image-wrapper">
+                            <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0010.png"
+                                alt="Retail Transformation Wine Shop" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="carousel-image-wrapper">
+                            <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0011.png"
+                                alt="Retail Transformation Wine Shop" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="carousel-image-wrapper">
+                            <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0012.png"
+                                alt="Retail Transformation Wine Shop" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="carousel-image-wrapper">
+                            <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0013.png"
+                                alt="Retail Transformation Wine Shop" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="carousel-image-wrapper">
+                            <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0014.png"
+                                alt="Retail Transformation Wine Shop" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="carousel-image-wrapper">
+                            <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0015.png"
+                                alt="Retail Transformation Wine Shop" class="img-fluid">
+                        </div>
                     </div>
                 </div>
-            </section>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+            </div>
+
+            <div class="swiper" id="fullWidthThumbnails">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0005.png"
+                            alt="Thumbnail 1">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0006.png"
+                            alt="Thumbnail 2">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0007.png"
+                            alt="Thumbnail 3">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0008.png"
+                            alt="Thumbnail 4">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0009.png"
+                            alt="Thumbnail 5">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0010.png"
+                            alt="Thumbnail 6">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0011.png"
+                            alt="Thumbnail 7">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0012.png"
+                            alt="Thumbnail 8">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0013.png"
+                            alt="Thumbnail 9">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0014.png"
+                            alt="Thumbnail 10">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/assets/img/project_details/Retail Transformation/Carousel/Bacardi_Jimi's_Storeroom_3D_A3_V11.0015.png"
+                            alt="Thumbnail 11">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
             <!-- ./ case-study -->
 
             <!-- <div class="comments-area">
@@ -655,26 +724,53 @@
     </div>
 
     <!-- JS here -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
     <script>
         document.addEventListener('DOMContentLoaded', function () {
-            // Initialize the Full Screen Swiper
-            var fullScreenSwiper = new Swiper(".myFullScreenSwiper", {
-                slidesPerView: 1, // Show one slide at a time for full width effect
-                spaceBetween: 0, // No space between slides for a seamless look
-                loop: true, // Enable infinite looping of slides
+            // Initialize the Thumbnail Swiper first
+            var fullWidthThumbnails = new Swiper("#fullWidthThumbnails", {
+                spaceBetween: 10,
+                slidesPerView: 4, // Default number of visible thumbnails
+                freeMode: true, // Allows dragging thumbnails freely
+                watchSlidesProgress: true, // Tracks progress for active state
+                breakpoints: {
+                    640: {
+                        slidesPerView: 5,
+                    },
+                    768: {
+                        slidesPerView: 6,
+                    },
+                    1024: {
+                        slidesPerView: 7, // Adjust number of visible thumbnails for larger screens
+                    },
+                    1200: {
+                        slidesPerView: 8, // More thumbnails on very large screens
+                    }
+                }
+            });
+
+            // Initialize the Main Image Swiper (using your .myFullScreenSwiper class)
+            var fullWidthMainSwiper = new Swiper(".myFullScreenSwiper", {
+                slidesPerView: 1,
+                spaceBetween: 0,
+                loop: true, // Enable infinite looping
                 autoplay: {
-                    delay: 4000, // Autoplay every 4 seconds
-                    disableOnInteraction: false, // Continue autoplay even after user interaction
+                    delay: 4000,
+                    disableOnInteraction: false,
                 },
                 pagination: {
-                    el: ".swiper-pagination",
-                    clickable: true, // Make pagination dots clickable
+                    el: ".full-width-image-carousel .swiper-pagination", // Target pagination within the carousel section
+                    clickable: true,
                 },
                 navigation: {
-                    nextEl: ".swiper-button-next",
-                    prevEl: ".swiper-button-prev",
+                    nextEl: ".full-width-image-carousel .swiper-button-next", // Target nav buttons within the carousel section
+                    prevEl: ".full-width-image-carousel .swiper-button-prev",
                 },
-                // Responsive breakpoints - crucial for responsiveness
+                thumbs: {
+                    swiper: fullWidthThumbnails, // Connect to the thumbnail Swiper
+                },
+                // Responsive breakpoints - crucial for responsiveness, as in your original script
                 breakpoints: {
                     // When window width is >= 320px
                     320: {
@@ -683,7 +779,7 @@
                     },
                     // When window width is >= 768px (tablets)
                     768: {
-                        slidesPerView: 1, // Still one for full-width image carousels
+                        slidesPerView: 1,
                         spaceBetween: 0
                     },
                     // When window width is >= 1024px (desktops)
@@ -694,40 +790,31 @@
                 }
             });
 
-            // Initialize the existing service carousel (if it's not already initialized elsewhere)
-            // Ensure this targets the correct service carousel if you have multiple.
-            // Assuming 'service-carousel' is the class for the section you provided.
-            var serviceSwiper = new Swiper(".service-carousel", {
-                slidesPerView: 1,
-                spaceBetween: 30,
-                loop: true,
-                autoplay: {
-                    delay: 3000,
-                    disableOnInteraction: false,
-                },
-                pagination: {
-                    el: ".swiper-pagination", // This might need a unique class if there are multiple paginations
-                    clickable: true,
-                },
-                navigation: {
-                    nextEl: ".swiper-nav.swiper-next", // Use the specific classes from your provided section
-                    prevEl: ".swiper-nav.swiper-prev",
-                },
-                breakpoints: {
-                    576: {
-                        slidesPerView: 2,
-                    },
-                    768: {
-                        slidesPerView: 3,
-                    },
-                    992: {
-                        slidesPerView: 4,
-                    },
-                    1200: {
-                        slidesPerView: 4,
-                    },
-                },
-            });
+            // If you have other Swiper initializations on your page (like the service carousel),
+            // you should keep them here. For example:
+            // var serviceSwiper = new Swiper(".service-carousel", {
+            //     slidesPerView: 1,
+            //     spaceBetween: 30,
+            //     loop: true,
+            //     autoplay: {
+            //         delay: 3000,
+            //         disableOnInteraction: false,
+            //     },
+            //     pagination: {
+            //         el: ".swiper-pagination",
+            //         clickable: true,
+            //     },
+            //     navigation: {
+            //         nextEl: ".swiper-nav.swiper-next",
+            //         prevEl: ".swiper-nav.swiper-prev",
+            //     },
+            //     breakpoints: {
+            //         576: { slidesPerView: 2 },
+            //         768: { slidesPerView: 3 },
+            //         992: { slidesPerView: 4 },
+            //         1200: { slidesPerView: 4 },
+            //     },
+            // });
         });
     </script>
     <script src="/assets/js/vendor/jquary-3.6.0.min.js"></script>
