--- a/details/pos_marketing.html
+++ b/details/pos_marketing.html
@@ -377,7 +377,7 @@
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/project_detials/Pos_marketing/Bacardi_MBG.html"><br>Bacardi MBG</a>
+                                <h4 class="service-text"><a href="/project_detials/Pos_marketing/Bacardi_MBG.html">Multi Brand <br> Gondola</a>
                                 </h4>
                                 <div class="service-thumb">
                                     <div class="overlay-color"></div>
