--- a/details/pos_marketing.html
+++ b/details/pos_marketing.html
@@ -389,6 +389,20 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item md-pb-30">
+                                <h4 class="service-text"><a href="/project_detials/Pos_marketing/beer_box.html"><br>BEER BOX</a>
+                                </h4>
+                                <div class="service-thumb">
+                                    <div class="overlay-color"></div>
+
+                                    <img style="object-fit: fill;" src="/assets/img/project_details/beer box/BeerBox 300x360.png" alt="service">
+
+                                    <a href="/project_detials/Pos_marketing/beer_box.html" class="service-btn">Read Details <i
+                                            class="fa-regular fa-arrow-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
 
                         
 
