--- a/details/gifting.html
+++ b/details/gifting.html
@@ -287,7 +287,7 @@
                     <div class="row gy-5">
                         <div class="col-lg-3 col-md-6">
                             <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/project_detials/gifting/ardmore.html">Ardmore</a>
+                                <h4 class="service-text"><a href="/project_detials/gifting/ardmore.html"><br>Ardmore</a>
                                 </h4>
                                 <div class="service-thumb">
                                     <div class="overlay-color"></div>
@@ -299,8 +299,22 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item md-pb-30">
+                                <h4 class="service-text"><a href="/project_detials/gifting/Castrol.html"><br>Castrol</a>
+                                </h4>
+                                <div class="service-thumb">
+                                    <div class="overlay-color"></div>
 
+                                    <img style="object-fit: fill;" src="/assets/img/project_details/Castrol/Castrol 300x360  .png" alt="service">
+
+                                    <a href="/project_detials/gifting/Castrol.html" class="service-btn">Read Details <i
+                                            class="fa-regular fa-arrow-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+                    
                 </div>
             </section>
 
