--- a/details/pos_marketing.html
+++ b/details/pos_marketing.html
@@ -403,6 +403,48 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item md-pb-30">
+                                <h4 class="service-text"><a href="/project_detials/Pos_marketing/hyderabad_Gondolas.html">Hyderabad<br>gondolas</a>
+                                </h4>
+                                <div class="service-thumb">
+                                    <div class="overlay-color"></div>
+
+                                    <img style="object-fit: fill;" src="/assets/img/project_details/Bacardi_Hyderabad_Gondola/Hyderabad 300x360 .png" alt="service">
+
+                                    <a href="/project_detials/Pos_marketing/hyderabad_Gondolas.html" class="service-btn">Read Details <i
+                                            class="fa-regular fa-arrow-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item md-pb-30">
+                                <h4 class="service-text"><a href="/project_detials/Pos_marketing/Hyderabad_Wallbays.html">Hyderabad<br>WallBays</a>
+                                </h4>
+                                <div class="service-thumb">
+                                    <div class="overlay-color"></div>
+
+                                    <img style="object-fit: fill;" src="/assets/img/project_details/Bacardi_Hyderabad_Wallbays/Wall bay 300x360  copy.png" alt="service">
+
+                                    <a href="/project_detials/Pos_marketing/Hyderabad_Wallbays.html" class="service-btn">Read Details <i
+                                            class="fa-regular fa-arrow-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item md-pb-30">
+                                <h4 class="service-text"><a href="/project_detials/Pos_marketing/coca_cola.html"><br>Coca - Cola</a>
+                                </h4>
+                                <div class="service-thumb">
+                                    <div class="overlay-color"></div>
+
+                                    <img style="object-fit: fill;" src="/assets/img/project_details/coca_cola/Coco Cola 300x360  .png" alt="service">
+
+                                    <a href="/project_detials/Pos_marketing/coca_cola.html" class="service-btn">Read Details <i
+                                            class="fa-regular fa-arrow-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
 
                         
 
