--- a/service.html
+++ b/service.html
@@ -221,7 +221,7 @@
                                     <img class="shape shape-1" src="assets/img/shapes/about-shape-1.png" alt="about">
                                     <img class="shape shape-2" src="assets/img/shapes/about-shape-2.png" alt="about">
                                 </div>
-                                <div class="img-2 reveal" style=" transform: scaleX(-1);">
+                                <div class="img-2 reveal">
                                     <img src="assets/img/images/services_hero.png" alt="about">
                                 </div>
                             </div>
