--- a/details/exhibition.html
+++ b/details/exhibition.html
@@ -72,7 +72,7 @@
                                     <a href="/service.html">Services</a>
                                     <ul>
                                         <li><a href="/details/atl_marketing.html">ATL Marketing</a></li>
-                                        
+
                                         <li><a href="/details/ttl_marketing.html">TTL Marketing</a></li>
                                         <li><a href="/details/b2b_marketing.html">B2B Marketing</a></li>
                                         <li><a href="/details/pos_marketing.html">POS Marketing</a></li>
@@ -207,10 +207,15 @@
                 </ul>
             </div>
             <ul class="side-menu-social ">
-                <li class="facebook"><a href="https://www.facebook.com/r2mi.india"><i class="fab fa-facebook-f"></i></a></li>
-                <li class="instagram"><a href="https://www.instagram.com/routetomarketm?igsh=MWhndmNxMmRqeGlsMQ=="><i class="fab fa-instagram"></i></a></li>
-                <li class="LinkedIn"><a href="https://www.linkedin.com/company/routetomarket-media-india-pvt-limited/"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                <li class="Youtube"><a href="https://youtube.com/@routetomarketmediaindiapvtltd?si=l9rlZw05eNBSIE6U"><i class="fa-brands fa-youtube"></i></i></a></li>
+                <li class="facebook"><a href="https://www.facebook.com/r2mi.india"><i class="fab fa-facebook-f"></i></a>
+                </li>
+                <li class="instagram"><a href="https://www.instagram.com/routetomarketm?igsh=MWhndmNxMmRqeGlsMQ=="><i
+                            class="fab fa-instagram"></i></a></li>
+                <li class="LinkedIn"><a
+                        href="https://www.linkedin.com/company/routetomarket-media-india-pvt-limited/"><i
+                            class="fa-brands fa-linkedin-in"></i></a></li>
+                <li class="Youtube"><a href="https://youtube.com/@routetomarketmediaindiapvtltd?si=l9rlZw05eNBSIE6U"><i
+                            class="fa-brands fa-youtube"></i></i></a></li>
             </ul>
         </div>
     </div>
@@ -225,15 +230,19 @@
             <section class="page-header" data-background="../assets/img/bg-img/page-header-bg.jpg">
                 <div class="overlay"></div>
                 <div class="shapes">
-                    <div class="shape shape-1"><img src="../assets/img/shapes/page-header-shape-1.png" alt="shape"></div>
-                    <div class="shape shape-2"><img src="../assets/img/shapes/page-header-shape-2.png" alt="shape"></div>
-                    <div class="shape shape-3"><img src="../assets/img/shapes/page-header-shape-3.png" alt="shape"></div>
+                    <div class="shape shape-1"><img src="../assets/img/shapes/page-header-shape-1.png" alt="shape">
+                    </div>
+                    <div class="shape shape-2"><img src="../assets/img/shapes/page-header-shape-2.png" alt="shape">
+                    </div>
+                    <div class="shape shape-3"><img src="../assets/img/shapes/page-header-shape-3.png" alt="shape">
+                    </div>
                 </div>
                 <div class="container">
                     <div class="page-header-content text-center">
                         <h1 class="title">Exhibition</h1>
                         <h4 class="sub-title"><a class="home" href="/index.html">Home </a><a class="home"
-                                href="/service.html">Service </a><a class="inner-page" href="/service.html">Exhibition</a></h4>
+                                href="/service.html">Service </a><a class="inner-page"
+                                href="/service.html">Exhibition</a></h4>
                     </div>
                 </div>
             </section>
@@ -287,148 +296,64 @@
                     <div class="row gy-5">
                         <div class="col-lg-3 col-md-6">
                             <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/atl_marketing.html">Project 1</a>
+                                <h4 class="service-text"><a href="/project_detials/Exhibition/SGMA4.html">SGMA 4th
+                                        edition</a>
                                 </h4>
                                 <div class="service-thumb">
                                     <div class="overlay-color"></div>
 
                                     <img src="/assets/img/service/ATLarketing.jpg" alt="service">
 
-                                    <a href="/details/atl_marketing.html" class="service-btn">Read Details <i
+                                    <a href="/project_detials/Exhibition/SGMA4.html" class="service-btn">Read Details <i
                                             class="fa-regular fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
-
                         <div class="col-lg-3 col-md-6">
-                            <div class="service-item item-3">
-                                <h4 class="service-text"><a href="/details/ttl_marketing.html"> Project 1</a>
+                            <div class="service-item md-pb-30">
+                                <h4 class="service-text"><a href="/project_detials/Exhibition/SGMA5.html">SGMA
+                                        5th edition</a>
                                 </h4>
                                 <div class="service-thumb">
                                     <div class="overlay-color"></div>
 
                                     <img src="/assets/img/service/ATLarketing.jpg" alt="service">
 
-                                    <a href="/details/ttl_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
+                                    <a href="/project_detials/Exhibition/SGMA5.html" class="service-btn">Read
+                                        Details <i class="fa-regular fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6">
-                            <div class="service-item">
-                                <h4 class="service-text"><a href="/details/pos_marketing.html">Project 1</a>
+                            <div class="service-item md-pb-30">
+                                <h4 class="service-text"><a href="/project_detials/Exhibition/SGMA7.html">SGMA
+                                        7th edition</a>
                                 </h4>
                                 <div class="service-thumb">
                                     <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
+
                                     <img src="/assets/img/service/ATLarketing.jpg" alt="service">
 
-                                    <a href="/details/pos_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
+                                    <a href="/project_detials/Exhibition/SGMA7.html" class="service-btn">Read
+                                        Details <i class="fa-regular fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
-
                         <div class="col-lg-3 col-md-6">
                             <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/b2b_marketing.html">Project 1</a>
+                                <h4 class="service-text"><a href="/project_detials/Exhibition/SGMA8.html">SGMA
+                                        8th edition</a>
                                 </h4>
                                 <div class="service-thumb">
                                     <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/ATLarketing.jpg" alt="service">
 
-                                    <a href="/details/b2b_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
+                                    <img src="/assets/img/project_details/SGMA8/SGMA 8 300x360  .png" alt="service">
+
+                                    <a href="/project_detials/Exhibition/SGMA8.html" class="service-btn">Read
+                                        Details <i class="fa-regular fa-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
-
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/exhibition.html">Project 1</a></h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/exhibition.jpg" alt="service">
-
-                                    <a href="/details/exhibition.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/pr_and_media.html">Project 1</a></h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/PR&MediaMarketing.jpg" alt="service">
-
-                                    <a href="/details/pr_and_media.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/brand_marketing.html">Project 1</a></h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/BrandMarketing.jpg" alt="service">
-
-                                    <a href="/details/brand_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/entertainment_marketing.html">Project 1</a>
-                                </h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/EntertainmentMarketing.png" alt="service">
-
-                                    <a href="/details/entertainment_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/merchandise_marketing.html">Project 1</a>
-                                </h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/MerchendiseMarketing.jpg" alt="service">
-
-                                    <a href="/details/merchandise_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/corporate_events.html">Project 1</a></h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-                                    <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/corporateEvents.jpg" alt="service">
-
-                                    <a href="/details/corporate_events.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
             </section>
 
             <!-- ./ service-details -->
@@ -508,16 +433,22 @@
                             <div class="col-md-6">
                                 <ul class="social-list">
                                     <li class="facebook">
-                                        <a href="https://www.facebook.com/r2mi.india"><i class="fab fa-facebook-f"></i></a>
+                                        <a href="https://www.facebook.com/r2mi.india"><i
+                                                class="fab fa-facebook-f"></i></a>
                                     </li>
                                     <li class="Youtube">
-                                        <a href="https://youtube.com/@routetomarketmediaindiapvtltd?si=l9rlZw05eNBSIE6U"><i class="fa-brands fa-youtube"></i></a>
+                                        <a
+                                            href="https://youtube.com/@routetomarketmediaindiapvtltd?si=l9rlZw05eNBSIE6U"><i
+                                                class="fa-brands fa-youtube"></i></a>
                                     </li>
                                     <li class="LinkedIn">
-                                        <a href="https://www.linkedin.com/company/routetomarket-media-india-pvt-limited/"><i class="fa-brands fa-linkedin-in"></i></a>
+                                        <a
+                                            href="https://www.linkedin.com/company/routetomarket-media-india-pvt-limited/"><i
+                                                class="fa-brands fa-linkedin-in"></i></a>
                                     </li>
                                     <li class="instagram">
-                                        <a href="https://www.instagram.com/routetomarketm?igsh=MWhndmNxMmRqeGlsMQ=="><i class="fab fa-instagram"></i></a>
+                                        <a href="https://www.instagram.com/routetomarketm?igsh=MWhndmNxMmRqeGlsMQ=="><i
+                                                class="fab fa-instagram"></i></a>
                                     </li>
                                 </ul>
                             </div>
