--- a/project.html
+++ b/project.html
@@ -234,9 +234,9 @@
                 </div>
                 <div class="container">
                     <div class="page-header-content text-center">
-                        <h1 class="title">Portfolio Grid 2 Columns</h1>
+                        <h1 class="title">Projects</h1>
                         <h4 class="sub-title"><a class="home" href="index.html">Home </a><span></span><a
-                                class="inner-page" href="project.html"> Portfolio Grid 2 Columns</a></h4>
+                                class="inner-page" href="project.html">Projects</a></h4>
                     </div>
                 </div>
             </section>
